Fixed customer all coupons long text wrap
Limited the amount of text to 2 lines per cell

--- a/src/app/customer/customer-coupons/customer-coupons.component.scss
+++ b/src/app/customer/customer-coupons/customer-coupons.component.scss
@@ -91,3 +91,12 @@ $accent: map-get($custom-theme, accent);
     margin: auto;
     padding: 8px;
 }
+
+.text-truncate {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 2;
+}
